Bug Fix, View: fixed select course button not showing. Issue: #328

--- a/src/main/java/upandgo/client/resources/CourseListCellStyle.css
+++ b/src/main/java/upandgo/client/resources/CourseListCellStyle.css
@@ -8,13 +8,11 @@
 .course{
 	cursor: default;
 	user-select: none;
-}
-
-.course-name{
-	margin-left: 2px;
-	max-width: 63%; 
+	max-width: 78%; 
 	overflow: hidden;
 	white-space: nowrap; 
+	display:inline-block;
+  	text-overflow: ellipsis;
 	float:right;
 }
 
